Completing the enhancement provided by myself
Issue #1 successfully implemented into project, all projects are now subfolders of the dashboard directory. editing a link's href argument allows for custom folder names.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,20 @@
     <title>Project Dashboard - XPCurrent</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="container">
-    <div id="text">Hello XPCurrent. You have now accessed the dashboard of all the projects stored on the computer. What will you access today?</div>
-    <a href="http://localhost/01.12.2022">Tic-Tac-Toe</a><br>
-    <a href="http://localhost/isitplusminusorzero">The check if a number is positive, negative or equal to 0</a><br>
-    <a href="http://localhost/reactivesquare">The square that moves left and right when you press the arrow keys</a><br>
-    <a href="http://localhost/unseenstore">Unseen Store's client database access</a><br>
-    <img src="spin.gif">
+        <div id="text">Hello XPCurrent. You have now accessed the dashboard of all the projects stored on the computer. What will you access today?</div>
+        <a href="01.12.2022">Tic-Tac-Toe</a><br>
+        <a href="isitplusminusorzero">The check if a number is positive, negative or equal to 0</a><br>
+        <a href="reactivesquare">The square that moves left and right when you press the arrow keys</a><br>
+        <a href="unseenstore">Unseen Store's client database access</a><br>
+        <a href="24-elementtable">JS script that displays a 24-element array/table.</a><br>
+        <a href="selfgeneratingmenu">A menu that gets generated from a database.</a><br>
+        <a href="converter">I think that's a converter?</a><br>
+        <a href="generic-blog-beta">A really old project, a generic blog.</a><br>
+        <img src="spin.gif">
     </div>
 </body>
+
 </html>
